--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="session"><span class="time">13.30–13.40</span><br>⏸️ Kort pause</div>
 
-        <div class="session"><span class="time">13.40–14.40</span><br>🌍 Alice Skaar – Erfaringer fra arbeid i Gaza</div>
+        <div class="session"><span class="time">13.40–14.40</span><br>🌍 Alice Skår – Erfaringer fra arbeid i Gaza</div>
 
         <div class="session"><span class="time">14.40–14.50</span><br>🙏 Styret – takk til foredragsholdere og utstillere</div>
 
