--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="session"><span class="time">10.30–11.15</span><br>🩺 Petrin Eide – Spesialistgodkjenning og nyheter sentralt</div>
 
-        <div class="session"><span class="time">11.15–11.30</span><br>💭 Diskusjon og innspill fra salen til styret</div>
+        <div class="session"><span class="time">11.15–11.30</span><br>🎓 Susanne Njåstad og Ida Karlsen, presentasjon av prosjekt/masteroppgave: Operasjonssykepleiers beredskapstrening</div>
 
         <div class="session"><span class="time">11.30–13.00</span><br>🍽️ Lunsj og besøk hos utstillere</div>
 
